@startuml

hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam monochrome true
skinparam DefaultFontName Helvetica
skinparam DefaultFontSize 15

entity Users {
    * userId: integer
    email: varchar
    password: varchar
    firstName: varchar
    lastName: varchar
    type: registrar | student | faculty | researcher
}

together {
    entity Admins {
        * userId: integer
    }

    entity Students {
        * userId: integer
        isPartTime: boolean
        isGraduate: boolean
        isAlumnus: boolean
    }

    entity Facultys {
        * userId: integer
        isPartTime: boolean
    }

    entity Researchers {
        * userId: integer
    }
}

Users <|-- Admins
Users <|-- Students
Users <|-- Facultys
Users <|-- Researchers

entity Reports {
    * reportId: integer
    authorId: integer <<FK: Researchers.userId>>
}

entity Holds {
    * holdId: integer
    holdType: academic | financial | health | desciplinary
}

entity StudentHasHold {
    studentId: integer <<FK: Students.userId>>
    holdId: integer
}

entity FacultyAdvisesStudent {
    facultyId: integer <<FK: Facultys.userId>>
    studentId: integer <<FK: Students.userId>>
}

together {

    entity Schools {
        * id: integer
    }

    entity Departments {
        * departmentId: integer
        school_id: integer <<FK: Schools.id>>
    }

    entity Majors {
        * majorId: integer
        departmentId: integer <<FK: Departments.departmentId>>
        title: varchar
    }

    entity StudentHasMajor {
        * majorId: integer <<FK:Majors.majorId>>
        * userId: integer <<FK: Students.userId>>
    }

    entity Minors {
        * minorId: integer
        departmentId: integer <<FK: Departments.departmentId>>
        title: varchar
    }

    entity StudentHasMinor {
        * minorId: integer <<FK: Minors.minorId>>
        * userId: integer <<FK: Students.userId>>
    }

}

together {

    entity Sections {
        * sectionId: integer
        semesterId: integer <<FK: Semesters.semesterId>>
        courseId: integer  <<FK: Courses.courseId>>
        facultyId: integer <<FK: Facultys.userId>>
        location: varchar
    }

    entity Enrollments {
        * sectionId: integer <<FK: Sections.sectionId>>
        * studentId: integer <<FK: Students.userId>>
        grade: varchar
    }

    entity Semesters {
        * semesterId: integer
        year: integer
        season: winter | spring | summer | fall
    }

    together {
        entity SectionInPeriod  {
            * sectionId: integer <<FK: Sections.sectionId>>
            * periodId: integer <<FK: Periods.sectionId>>
        }

        entity Periods {
            * periodId: integer
            days: Mon | Tues | Wed | Thu | Fri | Sat
            startTime: time
            endTime: time
        }
        
    }
}

together {
     entity Sessions {
        * sessionId: integer
        sectionId: integer <<FK: Sections.sessionId>>
        hostedAt: datetime
    }

    entity StudentAttendsSession { 
        * enrollmentId: integer <<FK: Enrollments.enrollmentId>>
        * studentId: integer <<FK: Students.userId>>
        status: varchar
    }
}

together {
    entity Courses {
        * courseId: integer
        title: varchar
        description: varchar
        credit: integer
    }

    entity Prerequisites {
        * prereqId: integer
    }

    entity CourseHasPrereq {
        * prereqId: integer
        * courseId: integer <<FK: Courses.courseId>>
    }

    entity PrereqGroupInPrerequisite {
        * groupId: integer
        * prereqId: integer <<FK: AndPrerequisites.prereqId>>
    }

    entity PrereqGroups {
        * groupId: Integer
    }

    entity CourseInPrereqGroup {
        * groupId: integer <<FK: PrereqGroup.orId>>
        * courseId: integer <<FK: Courses.courseId>>
    }
}

Prerequisites ||--o{ CourseHasPrereq
Courses ||--o{ CourseHasPrereq
PrereqGroups ||-o{ PrereqGroupInPrerequisite
Prerequisites ||--o{ PrereqGroupInPrerequisite
Courses ||--o{ CourseInPrereqGroup
PrereqGroups ||--o{ CourseInPrereqGroup

Students ||--|{ FacultyAdvisesStudent
Students ||--o{ StudentHasHold
Students ||--|{ StudentHasMinor
Students ||--|{ StudentHasMajor
Students ||--|{ StudentAttendsSession

Sessions }o--|| Sections
Sessions ||--o{ StudentAttendsSession

StudentHasHold }o--|| Holds

Facultys ||--o{ FacultyAdvisesStudent
Facultys }|--|| Departments

Reports }o-|| Researchers 

Departments ||--|{ Majors
Departments ||--|{ Minors
Departments ||--o{ Courses
Departments ||--o{ Enrollments

Minors ||--|{ StudentHasMinor
Majors ||--|{ StudentHasMajor

Courses ||--o{ Sections

Sections ||--o{ Enrollments
Sections ||--o{ SectionInPeriod

Periods ||-o{ SectionInPeriod

@enduml